# trx-cpp

./: .clang-format  .clang-tidy  .gitignore  .readthedocs.yaml  CMakeLists.txt  Dockerfile  LICENSE  README.md  buildlog.txt  check_syntax  clang-format-all  codecov.yml  conanfile.py  conanfile.txt  fixes.yaml  readthedocs.yaml
.github/workflows/: build_test.yml  ci.yml  clang-tidy.yml  test.yml  trx-cpp-tests.yml
bench/: CMakeLists.txt  bench_trx_realdata.cpp  bench_trx_stream.cpp  plot_bench.R  plot_bench.py  run_benchmarks.sh
cmake/: trx-cppConfig.cmake.in
docs/: Doxyfile  api.rst  api_layers.rst  benchmarks.rst  building.rst  concepts.rst  conf.py  downstream_usage.rst  index.rst  integration.rst  introduction.rst  linting.rst  nifti.rst  overview.rst  quick_start.rst  reading.rst  requirements.txt  spatial_queries.rst  spec.md  spec.rst  streaming.rst  usage.rst  writing.rst
examples/: CMakeLists.txt  cli_colors.h  load_trx.cpp  trx_nifti_affine.cpp  trxinfo.cpp
examples/install-using-conan/: CMakeLists.txt  README.md  conanfile.txt  load_trx.cpp
examples/install-using-vendor/: CMakeLists.txt
include/trx/: compat.h  dirent.h  filesystem.h  nifti_io.h  streamlines_ops.h  trx.h  trx.tpp
include/trx/detail/: dtype_helpers.h  exceptions.h  zip_raii.h
scripts/: fetch_test.sh
src/: nifti_io.cpp  trx.cpp  trx.h  trx.tpp
src/detail/: dtype_helpers.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
tests/: CMakeLists.txt  test_trx_anytrxfile.cpp  test_trx_filesystem.cpp  test_trx_groups_summary.cpp  test_trx_io.cpp  test_trx_mmap.cpp  test_trx_streamlines_ops.cpp  test_trx_trxfile.cpp
tests/src/: test_trx_mmap.cpp
